--- a/app/src/main/res/drawable/keydesign_07_char_released.xml
+++ b/app/src/main/res/drawable/keydesign_07_char_released.xml
@@ -3,21 +3,19 @@
     <layer-list>
         <item>
             <shape android:shape="rectangle">
-                <solid
-                    android:color="#19FFFFFF"/>
-                <corners android:radius="4dp" />
+                <solid android:color="#19FFFFFF" />
+                <corners android:radius="6dp" />
             </shape>
         </item>
 
         <item
-            android:top="1dp"
             android:bottom="1dp"
             android:left="1dp"
-            android:right="1dp">
+            android:right="1dp"
+            android:top="1dp">
             <shape android:shape="rectangle">
-                <solid
-                    android:color="#37FFFFFF"/>
-                <corners android:radius="3dp" />
+                <solid android:color="#37FFFFFF" />
+                <corners android:radius="5dp" />
             </shape>
         </item>
 
