--- a/app/src/main/res/layout/fragment_keyboard_chunjiin_basic.xml
+++ b/app/src/main/res/layout/fragment_keyboard_chunjiin_basic.xml
@@ -1,211 +1,232 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <LinearLayout
+    <data>
+
+        <variable
+            name="kbservice"
+            type="com.sb.fittingKeyboard.service.InputMethodServiceViewRefactor" />
+    </data>
+
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="match_parent">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:orientation="horizontal">
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-            <Button
-                android:id="@+id/btnChunL"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
                 android:layout_weight="1"
-                android:textAllCaps="false"
-                android:textColor="#000000"
-                android:textSize="18sp" />
+                android:orientation="horizontal">
 
-            <Button
-                android:id="@+id/btnChunK"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:textAllCaps="false"
-                android:textColor="#000000"
-                android:textSize="18sp" />
+                <Button
+                    android:id="@+id/btnChunL"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:text="ㅣ"
+                    android:textAllCaps="false"
+                    android:textColor="@{kbservice.myDefaultFontColor}"
+                    android:textSize="@{kbservice.myKeyboardFontSize}" />
 
-            <Button
-                android:id="@+id/btnChunM"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:textAllCaps="false"
-                android:textColor="#000000"
-                android:textSize="18sp" />
+                <Button
+                    android:id="@+id/btnChunK"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:text="ᆞ"
+                    android:textAllCaps="false"
+                    android:textColor="@{kbservice.myDefaultFontColor}"
+                    android:textSize="@{kbservice.myKeyboardFontSize}" />
 
-            <ImageButton
-                android:id="@+id/btnChunDEL"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_gravity="center_horizontal"
+                <Button
+                    android:id="@+id/btnChunM"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:text="ㅡ"
+                    android:textAllCaps="false"
+                    android:textColor="@{kbservice.myDefaultFontColor}"
+                    android:textSize="@{kbservice.myKeyboardFontSize}" />
+
+                <ImageButton
+                    android:id="@+id/btnChunDEL"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_weight="1"
+                    android:elevation="2dp"
+                    android:padding="10dp"
+                    android:scaleType="fitCenter"
+                    android:src="@drawable/keyic_delete_black" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
                 android:layout_weight="1"
-                android:elevation="2dp"
-                android:padding="10dp"
-                android:scaleType="fitCenter"
-                android:src="@drawable/keyic_delete_black" />
+                android:orientation="horizontal">
+
+                <Button
+                    android:id="@+id/btnChunRZ"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:text="ㄱㅋ"
+                    android:textAllCaps="false"
+                    android:textColor="@{kbservice.myDefaultFontColor}"
+                    android:textSize="@{kbservice.myKeyboardFontSize}" />
+
+                <Button
+                    android:id="@+id/btnChunSF"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:textAllCaps="false"
+                    android:textColor="@{kbservice.myDefaultFontColor}"
+                    android:textSize="@{kbservice.myKeyboardFontSize}" />
+
+                <Button
+                    android:id="@+id/btnChunEX"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:text="ㄷㅌ"
+                    android:textAllCaps="false"
+                    android:textColor="@{kbservice.myDefaultFontColor}"
+                    android:textSize="@{kbservice.myKeyboardFontSize}" />
+
+
+                <Button
+                    android:id="@+id/btnChunSPACE"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:text="SPACE"
+                    android:textAllCaps="false"
+                    android:textColor="@{kbservice.myFunctionFontColor}"
+                    android:textSize="@{kbservice.myKeyboardFontSize}" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:orientation="horizontal">
+
+                <Button
+                    android:id="@+id/btnChunQV"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:text="ㅂㅍ"
+                    android:textAllCaps="false"
+                    android:textColor="@{kbservice.myDefaultFontColor}"
+                    android:textSize="@{kbservice.myKeyboardFontSize}" />
+
+                <Button
+                    android:id="@+id/btnChunTG"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:text="ㅅㅎ"
+                    android:textAllCaps="false"
+                    android:textColor="@{kbservice.myDefaultFontColor}"
+                    android:textSize="@{kbservice.myKeyboardFontSize}" />
+
+                <Button
+                    android:id="@+id/btnChunWC"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:text="ㅈㅊ"
+                    android:textAllCaps="false"
+                    android:textColor="@{kbservice.myDefaultFontColor}"
+                    android:textSize="@{kbservice.myKeyboardFontSize}" />
+
+                <ImageButton
+                    android:id="@+id/btnChunENTER"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_weight="1"
+                    android:elevation="2dp"
+                    android:padding="10dp"
+                    android:scaleType="fitCenter"
+                    android:src="@drawable/keyic_enter_black" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:orientation="horizontal">
+
+                <Button
+                    android:id="@+id/btnChunSPECIAL"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight=".5"
+                    android:text="!#$"
+                    android:textColor="@{kbservice.myFunctionFontColor}"
+                    android:textSize="12sp" />
+
+                <ImageButton
+                    android:id="@+id/btnChunLANG"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_weight=".5"
+                    android:elevation="2dp"
+                    android:padding="10dp"
+                    android:scaleType="fitCenter"
+                    android:src="@drawable/keyic_language_black" />
+
+                <Button
+                    android:id="@+id/btnChunDG"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:text="ㅇㅎ"
+                    android:textAllCaps="false"
+                    android:textColor="@{kbservice.myDefaultFontColor}"
+                    android:textSize="@{kbservice.myKeyboardFontSize}" />
+
+                <ImageButton
+                    android:id="@+id/btnChunInit"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_weight="1"
+                    android:elevation="2dp"
+                    android:padding="10dp"
+                    android:scaleType="fitCenter"
+                    android:src="@drawable/keyic_arrowright_black" />
+
+                <Button
+                    android:id="@+id/btnChunDOT"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight=".5"
+                    android:text=".,"
+                    android:textAllCaps="false"
+                    android:textColor="@{kbservice.myFunctionFontColor}"
+                    android:textSize="@{kbservice.myKeyboardFontSize}" />
+
+                <Button
+                    android:id="@+id/btnChunAT"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight=".5"
+                    android:text="`@`"
+                    android:textAllCaps="false"
+                    android:textColor="@{kbservice.myFunctionFontColor}"
+                    android:textSize="@{kbservice.myKeyboardFontSize}" />
+            </LinearLayout>
         </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:orientation="horizontal">
-
-            <Button
-                android:id="@+id/btnChunRZ"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:textAllCaps="false"
-                android:textColor="#000000"
-                android:textSize="18sp" />
-
-            <Button
-                android:id="@+id/btnChunSF"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:textAllCaps="false"
-                android:textColor="#000000"
-                android:textSize="18sp" />
-
-            <Button
-                android:id="@+id/btnChunEX"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:textAllCaps="false"
-                android:textColor="#000000"
-                android:textSize="18sp" />
-
-
-
-            <Button
-                android:id="@+id/btnChunSPACE"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:textAllCaps="false"
-                android:textColor="#000000"
-                android:textSize="18sp"/>
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:orientation="horizontal">
-
-            <Button
-                android:id="@+id/btnChunQV"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:textAllCaps="false"
-                android:textColor="#000000"
-                android:textSize="18sp" />
-
-            <Button
-                android:id="@+id/btnChunTG"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:textAllCaps="false"
-                android:textColor="#000000"
-                android:textSize="18sp" />
-
-            <Button
-                android:id="@+id/btnChunWC"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:textAllCaps="false"
-                android:textColor="#000000"
-                android:textSize="18sp" />
-
-            <ImageButton
-                android:id="@+id/btnChunENTER"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_gravity="center_horizontal"
-                android:layout_weight="1"
-                android:elevation="2dp"
-                android:padding="10dp"
-                android:scaleType="fitCenter"
-                android:src="@drawable/keyic_enter_black" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:orientation="horizontal">
-
-            <Button
-                android:id="@+id/btnChunSPECIAL"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight=".5"
-                android:text="!#$"
-                android:textColor="#000000"
-                android:textSize="12sp" />
-
-            <ImageButton
-                android:id="@+id/btnChunLANG"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_gravity="center_horizontal"
-                android:layout_weight=".5"
-                android:elevation="2dp"
-                android:padding="10dp"
-                android:scaleType="fitCenter"
-                android:src="@drawable/keyic_language_black" />
-
-            <Button
-                android:id="@+id/btnChunDG"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:textAllCaps="false"
-                android:textColor="#000000"
-                android:textSize="18sp" />
-
-            <ImageButton
-                android:id="@+id/btnChunInit"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_gravity="center_horizontal"
-                android:layout_weight="1"
-                android:elevation="2dp"
-                android:padding="10dp"
-                android:scaleType="fitCenter"
-                android:src="@drawable/keyic_arrowright_black" />
-
-            <Button
-                android:id="@+id/btnChunDOT"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight=".5"
-                android:textAllCaps="false"
-                android:textColor="#000000"
-                android:textSize="18sp" />
-
-            <Button
-                android:id="@+id/btnChunAT"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight=".5"
-                android:textAllCaps="false"
-                android:textColor="#000000"
-                android:textSize="18sp" />
-        </LinearLayout>
-    </LinearLayout>
-</FrameLayout>
+    </FrameLayout>
+</layout>
